[tool.poetry]
name = "graphs"
version = "0.1.0"
description = ""
authors = ["Timothy Gu <timothygu@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
cycler = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
